@@ -1,3 +1,8 @@
+2004-11-05  Matthias Clasen  <mclasen@redhat.com>
+
+	* tests/strtod-test.c: Portability fixes and extra sanity
+	checks.  (#157453, Morten Welinder)
+
 2004-11-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* glib/gstrfuncs.c (g_ascii_strtod): Handle numbers like
